<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TikTokActivity">
    <LinearLayout
        android:id="@+id/verticalLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <!--TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Congrats on exploring TikTok World Canada 2025! Before you grab your custom swag, tell us:\n "
            android:textSize="30sp"
            android:visibility="gone"
            app:fontFamily="@font/tiktok" />
        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            />
        <Button
            android:id="@+id/signout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign out"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            /-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Congrats on exploring TikTok World Canada 2025! Before you grab your custom swag, tell us:\n "
            android:textSize="25sp"
            app:fontFamily="@font/tiktok" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Which TikTok solutions are you most interested in learning more about? (Pick as many as you like)"
    android:textSize="20sp"
    app:fontFamily="@font/tiktok" />


            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox1"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok_light"
                />


            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox2"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok_light"
                />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox3"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok_light"
               />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox4"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok_light"
                />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox5"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok_light"
                />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox6"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok_light"
                />

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox7"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok_light"
                />



        <LinearLayout
            android:id="@+id/verticalLinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok">
            </TextView>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextInput"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/verticalLinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textSize="15sp"
                app:fontFamily="@font/tiktok">
            </TextView>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextInput"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:textSize="15sp"
                />
        </LinearLayout>

    <Button
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textSize="15sp"
        android:layout_centerInParent="true" />

    </LinearLayout>
</RelativeLayout>
</ScrollView>